# Atlas-R1

atlasr1_controller/: CMakeLists.txt  package.xml
atlasr1_controller/atlasr1_controller/: simple_controller.py  whymialive_1.py
atlasr1_controller/config/: atlasr1_controllers.yaml  joy_teleop.yaml
atlasr1_controller/launch/: controller.launch.py  joystick_teleop.launch.py
atlasr1_description/: CMakeLists.txt  package.xml
atlasr1_description/launch/: display.launch.py  gazebo.launch.py
atlasr1_description/meshes/: base_link.stl  wheel_3.stl
atlasr1_description/rviz/: display.rviz
atlasr1_description/urdf/: atlasr1.urdf.xacro  atlasr1_gazebo.xacro  atlasr1_ros2_control.xacro  atlasr3.urdf.xacro
